# diplomamunka

./: .gitignore  README.md
boris-corrector/: CMakeLists.txt  Regex.txt
boris-corrector/cmake/: ExtendedExternalProject.cmake
boris-corrector/design/: class_diagram.mdj  class_diagram_mvc.mdj
boris-corrector/include/: boris_corrector.h  file_system.hpp  utilities.hpp
boris-corrector/include/core_logic/: boris_corrector.h
boris-corrector/src/: CMakeLists.txt  boris_corrector.cpp  main.cpp
boris-corrector/src/core_logic/: boris_corrector.cpp
boris-corrector/test/: CMakeLists.txt  test_boris_corrector.cpp  test_file_system.cpp  test_main.cpp  test_utilities.cpp
boris-corrector/test/system_test/: animation.fa_  counter.SB_  drill_1.bm_  drill_2.bm_  main.BS_  run_test.cmake
boris-corrector/test/unit_test/: test_boris_corrector.cpp  test_file_system.cpp  test_main.cpp  test_utilities.cpp
boris-io/investigation/measurements/: OlvassEl.txt
boris-io/investigation/prototype/: BorisProdigy.mcppi
boris-io/investigation/wiretapping/: Dump view.html  OlvassEl.txt  Terminal view.html
boris-io/production/drilling-template/: Diplomamunka.dft  Diplomamunka.dxf  Diplomamunka.psm
boris-io/production/io-labels/: Bemenetek.label  Kimenetek.label  OlvassEl.txt
boris-io/production/schematics/: Boris_IO.IntLib  Boris_IO.PrjPCB  Boris_IO.PrjPCBStructure  Boris_IO.RUL  Boris_IO.SCHLIB  Boris_IO.rep  Boris_IO_1.SchDoc  Boris_IO_1.rep  Boris_IO_2.SchDoc  Boris_IO_3.SchDoc  Boris_IO_4.SchDoc  Boris_IO_5.SchDoc  boom_boris_io.xlsx
boris-teleporter/: CMakeLists.txt
boris-teleporter/cmake/: CompileOptionsCXX14.cmake  ExtendedExternalProject.cmake  MaxSimultaneousJobs.cmake  OptimizedCompileOptions.cmake  StandardCXX14.cmake
boris-teleporter/include/core_logic/: boris_teleporter.h
boris-teleporter/src/: CMakeLists.txt
boris-teleporter/src/core_logic/: boris_teleporter.cpp
boris-teleporter/test/: CMakeLists.txt  test_boris_teleporter.cpp  test_main.cpp
documentation/: appendices.docx  chapters.docx  cover_page.docx
emulated-system/control/: Main.bak  Main.cxp  Main.opt  Main_IO.xlsx  Symbols.xlsx
emulated-system/control/test/: IO_Table.xlsx  bit_access_test.bak  bit_access_test.cxp  bit_access_test.opt  io_test.bak  io_test.cxp  io_test.opt
emulated-system/emulation/: main.BSY  main_hwio.BSY
emulated-system/emulation/common/: alu_1bit.SBL  alu_8bit.SBL  bitwise_and_8bit.SBL  bitwise_or_8bit.SBL  counter_16bit.SBL  get_bit_8bit.SBL  incremental_counter_8bit.SBL  latch_16bit.SBL  latch_8bit.SBL
emulated-system/emulation/core/: animation.fab  body_info_summary.SBL  body_info_transcoder.SBL  body_inserter.sbl  body_insertion_validator.SBL  cell_validator.sbl  crane_and_bodies.SBL  error_catcher.sbl  operator_action_validator.sbl  platform_validator.SBL  robots.SBL  selected_body_informer.SBL
emulated-system/emulation/crane/: crane.SBL  crane_gripper_controller.SBL  crane_position_to_xy.SBL  (+1 more)
emulated-system/remake/: CarAssemblyLine.pro
fake-boris/: .qmake.conf  FakeBoris.pro
fake-boris/design/: BorisAccess.wsd  BorisAccessComponentLevel.wsd  FakeBORIS.mdj  FakeBORIS.vpp
fake-boris/include/: AbstractBorisController.h  BasicPort.h  BorisController.h  CyclicTimer.h  DeveloperPort.h  EchoPort.h  Exception.h  IOPort.hpp  PropertyHelper.hpp  SerialPort.h  Timer.hpp  Verify.hpp  VirtualPort.h  abstract_boris_controller.h  boris_controller.h  connection_provider.h  fakeboris.h  property_helper.h
fake-boris/qml/: BorisUI.pro  BorisUI_en_US.ts  CheckButton.qml  ColumnCaptionRow.qml  DigitalInputOutputRow.qml  EmptyLabel.qml  FramedLabel.qml  Main.cpp  MainWindow.qml  PortControllerRow.qml  Resources.qrc
fake-boris/src/: AbstractBorisController.cpp  BasicPort.cpp  BorisAccess.pro  BorisController.cpp  CyclicTimer.cpp  DeveloperPort.cpp  EchoPort.cpp  Exception.cpp  FakeBorisLib.pro  SerialPort.cpp  VirtualPort.cpp  abstract_boris_controller.cpp  boris_controller.cpp  fakeboris.cpp
fake-boris/test/: BorisAccessTests.pro  BorisControllerTests.cpp  BorisControllerTests.pro  FakeBorisTests.pro  GoogleTest.pro  PropertyHelperTests.cpp  PropertyHelperTests.pro  TestDummy.cpp  TestDummy.h  TestSuite.pro  boris_controller_tests.cpp  tst_fakeboristests.cpp
(+135 files in other folders)
